@@ -1,3 +1,13 @@
+2005-01-17  Jose E. Marchesi  <jemarch@dataware.es>
+
+	* src/ps.c: idem.
+
+	* src/main.c: idem.
+
+	* src/resource.c (resource_buildDatabase): Patch from FreeBSD
+	ports in order to avoid gcc-dependant code: variable declaration
+	only on beginning of blocks.
+
 2004-12-31  Jose E. Marchesi  <jemarch@dataware.es>
 
 	* src/Makefile.am (AM_CFLAGS): Use @X_CFLAGS@ from autoconf
